--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,9 @@ footer-links:
 
 # Your disqus shortname, entering this will enable commenting on posts
 disqus:
+
+# This is the list of pages to include in the header of the website.
+pages_list:
+  Archive: '/archive/'
+  #About: '/about/'
+  #Feed: '/atom.xml'
