--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ footer-links:
   flickr:
   github: dugjason
   instagram:
-  linkedin:
+  linkedin: jdugdale
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: dugjason
